plane_id to airplane_id migration

--- a/airlines-server/app/views/airplanes/index.html.erb
+++ b/airlines-server/app/views/airplanes/index.html.erb
@@ -3,7 +3,7 @@
     <ul>
         <% @airplanes.each do |airplane| %>
         <li>
-            <%= airplane.airline_company %>: <%= airplane.plane_id %>
+            <%= airplane.airline_company %>: <%= airplane.airplane_id %>
         </li>
         <% end %>
     </ul>
