--- a/airlines-server/app/assets/stylesheets/application.scss
+++ b/airlines-server/app/assets/stylesheets/application.scss
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+ @import "bootstrap";
+
+ body{
+
+   background-image: url('/assets/Plane.png');
+   background-repeat: no-repeat;
+}
