--- a/airlines-server/app/views/airplanes/index.html.erb
+++ b/airlines-server/app/views/airplanes/index.html.erb
@@ -3,8 +3,16 @@
     <ul>
         <% @airplanes.each do |airplane| %>
         <li>
-            <%= airplane.airline_company %>: <%= airplane.airplane_id %>
+            <%= airplane.airline_company %>: <%= airplane.airplane_name %>
+            <br/>
+            <%= link_to 'View plane information', airplane_path( airplane ) %>
+            <%= link_to 'Edit airplane', edit_airplane_path( airplane ) %>
+            <%= link_to 'Destroy airplane', airplane_path( airplane ), :method => 'delete' %>
+            <br/>
         </li>
         <% end %>
     </ul>
+    <hr>
+    <%= link_to 'Add a new plane', new_airplane_path %>
+
 </div>
