--- a/airlines-server/app/views/flights/index.html.erb
+++ b/airlines-server/app/views/flights/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Flights#index</h1>
-<p>Find me in app/views/flights/index.html.erb</p>
+<h1>All flights</h1>
+<div>
+    <ul>
+        <%= @flights.each do |flight| %>
+        <li>
+            <%= flight.airplane_name %> trip information:
+            <br/>
+            Origin: <%= flight.origin %>
+            <br/>
+            Destination: <%= flight.destination %>
+            <br/>
+            Departure: <%= flight.date %>
+            <br/>
+            <%= link_to 'Detailed flight information', flight_path %>
+        </li>
+    </ul>
+    <%= link_to 'Add a new flight', new_flight_path %>
+</div>
