--- a/airlines-server/app/views/flights/show.html.erb
+++ b/airlines-server/app/views/flights/show.html.erb
@@ -1,2 +1,16 @@
-<h1>Flights#show</h1>
-<p>Find me in app/views/flights/show.html.erb</p>
+<h1>Detailed flight information</h1>
+<br/>
+<ul>
+    <li>Plane type: <%= @flight.airplane_name %></li>
+    <br/>
+    <li>Carrier: ADD</li>
+    <br/>
+    <li>Origin: <%= @flight.origin %></li>
+    <br/>
+    <li>Destination: <%= @flight.destination %></li>
+    <br/>
+    <li>Time and date: <%= @flight.date %></li>
+    <br/>
+    <li>Passenger list: ADD</li>
+    <br/>
+</ul>
