--- a/airlines-server/app/views/airplanes/_form.html.erb
+++ b/airlines-server/app/views/airplanes/_form.html.erb
@@ -1,15 +1,45 @@
 <%= form_for @airplane do |f| %>
-    <%= f.label :airplane_name %>
-    <%= f.string :airplane_name %>
-    <br/>
-    <%= f.label :airline_company %>
-    <%= f.string :airline_company %>
-    <br/>
-    <%= f.label :row %>
-    <%= f.integer :row %>
-    <br/>
-    <%= f.label :column %>
-    <%= f.integer :column %>
-    <br/>
-    <%= f.submit %>
-<% end %>
+<div class="form-group row">
+  <label for="colFormLabel" class="col-sm-2 col-form-label col-form-label-sm">
+  <%= f.label :airplane_name %>
+</label>
+  <div class="col-sm-10">
+  <%= f.text_field :airplane_name %>
+  </div>
+</div>
+  <br>
+  <div class="form-group row">
+    <label for="colFormLabel" class="col-sm-2 col-form-label col-form-label-sm">
+  <%= f.label :airline_company %>
+</label>
+    <div class="col-sm-10">
+  <%= f.text_field :airline_company %>
+</div>
+</div>
+  <br>
+  <div class="form-group row">
+    <label for="colFormLabel" class="col-sm-2 col-form-label col-form-label-sm">
+  <%= f.label :row %>
+</label>
+<div class="col-sm-10">
+  <%= f.text_field :row %>
+</div>
+</div>
+  <br>
+  <div class="form-group row">
+    <label for="colFormLabel" class="col-sm-2 col-form-label col-form-label-sm">
+  <%= f.label :column %>
+</label>
+<div class="col-sm-10">
+  <%= f.text_field :column %>
+</div>
+</div>
+       <br>
+  <div class="col-sm-10">
+  <%= f.submit "Save", class: "btn btn-primary btn-lg" %>
+  </div>
+
+  <% end %>
+<hr/>
+<%= link_to 'Airplanes index', airplanes_path %>
+  
