--- a/airlines-server/app/views/flights/_form.html.erb
+++ b/airlines-server/app/views/flights/_form.html.erb
@@ -1,15 +1,57 @@
-<%= form_for @flight do |a| %>
-    <%= a.label :airplane_name %>
-    <%= a.string :airplane_name %>
-    <br/>
-    <%= a.label :date %>
-    <%= a.datetime :date %>
-    <br/>
-    <%= a.label :origin %>
-    <%= a.string :origin %>
-    <br/>
-    <%= a.label :destination %>
-    <%= a.string :destination %>
-    <br/>
-    <%= a.submit %>
-<% end %>
+<%= form_for @flight do |att| %>
+
+<div class="form-group row">
+  <div class="col-sm-10">
+  <%= att.select :airplane_id, Airplane.pluck(:airline_company, :id) %>
+  </div>
+</div>
+<div class="form-group row">
+  <div class="col-sm-10">
+  <%= att.select :airplane_id, Airplane.pluck( :airplane_name, :id) %>
+  </div>
+</div>
+
+<div class="form-group row">
+  <label for="colFormLabel" class="col-sm-2 col-form-label col-form-label-sm">
+  <%= att.label :flight_name %>
+</label>
+  <div class="col-sm-10">
+  <%= att.text_field :flight_name %>
+  </div>
+</div>
+  <br>
+  <div class="form-group row">
+    <label for="colFormLabel" class="col-sm-2 col-form-label col-form-label-sm">
+  <%= att.label :date %>
+</label>
+    <div class="col-sm-10">
+  <%= att.text_field :date %>
+</div>
+</div>
+  <br>
+  <div class="form-group row">
+    <label for="colFormLabel" class="col-sm-2 col-form-label col-form-label-sm">
+  <%= att.label :origin %>
+</label>
+<div class="col-sm-10">
+  <%= att.text_field :origin %>
+</div>
+</div>
+  <br>
+  <div class="form-group row">
+    <label for="colFormLabel" class="col-sm-2 col-form-label col-form-label-sm">
+  <%= att.label :destination %>
+</label>
+<div class="col-sm-10">
+  <%= att.text_field :destination %>
+</div>
+</div>
+       <br>
+  <div class="col-sm-10">
+  <%= att.submit "Save", class: "btn btn-primary btn-lg" %>
+  </div>
+
+  <% end %>
+<hr/>
+<%= link_to 'Flights index', flights_path %>
+  
