--- a/airlines-server/app/views/layouts/application.html.erb
+++ b/airlines-server/app/views/layouts/application.html.erb
@@ -44,7 +44,9 @@
         <li class="nav-item">
         <%= link_to 'Airplane', airplanes_path( @airplane ), class:"nav-link active" %>
       </li>
-
+      <li class="nav-item">
+      <%= link_to 'Flight', flights_path( @flight ), class:"nav-link active" %>
+    </li>
 
       </ul>
     </nav>
