--- a/airlines-server/app/views/users/new.html.erb
+++ b/airlines-server/app/views/users/new.html.erb
@@ -1,2 +1,63 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>Create an Account</h1>
+
+  <% if flash[:errors] %>
+    <strong>Please correct the following errors :</strong>
+    <ol>
+      <% flash[:errors].each do |e| %>
+      <li>
+        <%= e %>
+      </li>
+      <% end %>
+    </ol>
+  <% end %>
+
+  <%= form_for(@user, :html => {:multipart => true}) do |f| %>
+  <div class="form-group row">
+    <label for="colFormLabel" class="col-sm-2 col-form-label col-form-label-sm">
+    <%= f.label :username %>
+  </label>
+  <div class="col-sm-10">
+    <%= f.text_field :username %>
+  </div>
+  </div>
+    <br>
+  <div class="form-group row">
+  <label for="colFormLabel" class="col-sm-2 col-form-label col-form-label-sm">
+    <%= f.label :email, "Email Address" %>
+  </label>
+  <div class="col-sm-10">
+    <%= f.text_field :email %>
+  </div>
+  </div>
+    <br>
+  <div class="form-group row">
+  <label for="colFormLabel" class="col-sm-2 col-form-label col-form-label-sm">
+    <%= f.label :password %>
+  </label>
+  <div class="col-sm-10">
+    <%= f.password_field :password %>
+  </div>
+  </div>
+   <br>
+   <div class="form-group row">
+   <label for="colFormLabel" class="col-sm-2 col-form-label col-form-label-sm">
+    <%= f.label :password_confirmation %>
+  </label>
+  <div class="col-sm-10">
+    <%= f.password_field :password_confirmation %>
+  </div>
+  </div>
+   <br>
+   <div class="form-group row">
+   <label for="colFormLabel" class="col-sm-2 col-form-label col-form-label-sm">
+   <%= f.label :user_type %>
+   </label>
+   <div class="col-sm-10">
+   <%= f.select :user_type, User.user_types.keys %>
+   </div>
+    </div>
+    <br>
+    <div class="col-sm-10">
+    <%= f.submit "Save", class: "btn btn-primary btn-lg"%>
+  </div>
+  <% end %>
