--- a/airlines-server/app/views/users/show.html.erb
+++ b/airlines-server/app/views/users/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h1><%= @user.username %></h1>
+
+
+  <% @user %>
+  <%= @user.user_type %>
+  <br>
+  <br>
+  <%= link_to 'Edit', edit_user_path( @user ) %>
