--- a/airlines-server/app/views/layouts/application.html.erb
+++ b/airlines-server/app/views/layouts/application.html.erb
@@ -20,7 +20,10 @@
       <%= link_to 'Logout', login_path, method: :delete, class:"nav-link active" %>
     </li>
 
-
+        <ul class="nav justify-content-left">
+        <li class="nav-item">
+          <%= link_to 'My Workspace', profile_path, class:"nav-link active" %>
+        </li>
 
 
       <% else %>
