--- a/airlines-server/app/views/flights/_form.html.erb
+++ b/airlines-server/app/views/flights/_form.html.erb
@@ -22,7 +22,7 @@
   <br>
   <div class="form-group row">
     <label for="colFormLabel" class="col-sm-2 col-form-label col-form-label-sm">
-  <%= att.label :date %>
+  <%= att.label :date, 'Date: YYYY-MM-DD HH:MM:SS' %>
 </label>
     <div class="col-sm-10">
   <%= att.text_field :date %>
