--- a/airlines-app/src/App.css
+++ b/airlines-app/src/App.css
@@ -1,3 +1,8 @@
+body{
+  background-image: url('Plane.png');
+  background-repeat: no-repeat;
+}
+
 .App {
   text-align: center;
 }
@@ -22,7 +27,4 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+
